# VEDIO_TOKEN

./: .gitignore  README.md  cli.py  pyproject.toml
docs/superpowers/plans/: 2026-07-06-video-embeddings.md
docs/superpowers/specs/: 2026-07-06-video-embeddings-design.md
src/vedio_token/: api.py  chunker.py  extractor.py  fuser.py  store.py  text_embedder.py  transcriber.py  visual_embedder.py
tests/: conftest.py  test_api.py  test_chunker.py  test_extractor.py  test_fuser.py  test_store.py  test_text_embedder.py  test_transcriber.py  test_visual_embedder.py
vscode-extension/: .vscodeignore  esbuild.js  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: apiClient.ts  config.ts  extension.ts  server.ts  statusBar.ts
vscode-extension/src/commands/: embedVideo.ts  searchVideo.ts
vscode-extension/src/test/: runTest.ts
vscode-extension/src/test/suite/: apiClient.test.ts  index.ts
vscode-extension/src/views/: resultsPanel.ts  segmentDetail.ts  segmentsTree.ts
