[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vedio-token"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "openai-whisper",
    "transformers",
    "sentence-transformers",
    "pandas",
    "pyarrow",
    "fastapi",
    "uvicorn",
    "httpx",
    "pillow",
    "torch",
    "ftfy",
    "regex",
    "tqdm",
]

[tool.hatch.build.targets.wheel]
packages = ["src/vedio_token"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
